force-app/main/default/objects/Booking__c/fields/Booking_A__c.field-meta.xml
<CustomField>
    <fullName>Booking_A__c</fullName>
    <label>Travel Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>