force-app/main/default/objects/Booking__c/fields/Booking_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Confirmation</label>
    <type>Checkbox</type>
</CustomField>