force-app/main/default/objects/Booking__c/fields/Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_Time__c</fullName>
    <description>Travel booking date and time</description>
    <label>Booking Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>