force-app/main/default/objects/Booking__c/fields/Booking_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Expiry_Date__c</fullName>
    <label>Booking Expiry Date</label>
    <type>Date</type>
</CustomField>