force-app/main/default/objects/Booking__c/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <label>Booking Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>