force-app/main/default/objects/Booking__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <label>Dummy</label>
    <type>Text</type>
    <length>255</length>
</CustomField>