force-app/main/default/objects/Booking__c/fields/Passenger_Email__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Passenger Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>