force-app/main/default/objects/Booking__c/fields/Passenger_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Phone_Number__c</fullName>
    <description>Passenger phone contact details</description>
    <inlineHelpText>Enter passenger phone</inlineHelpText>
    <label>Passenger Phone Number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>