force-app/main/default/objects/Booking__c/fields/Special_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Special_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Assistance</label>
    <type>Checkbox</type>
</CustomField>